--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 1.5rem;
+    padding: 1.5rem 0;
 
     &__logo {
         @include logo;
@@ -17,8 +18,9 @@
         border-radius: 1rem;
         background-color: $secondary-color-white;
         color: $primary-color-green;
+        font-size: 0.75rem;
         font-weight: 600;
-        padding: 0.5rem 1.25rem;
+        padding: 0.5rem 1rem;
         display: flex;
         align-items: center;
         gap: 0.5rem;
