--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@
 body {
     margin: 0;
     padding: 0 1rem;
-    font-family: 'Outfit';
+    font-family: 'Outfit', sans-serif;
     font-weight: 400;
     font-style: normal;
     font-size: 0.75rem;
