Filters button toggle

--- a/src/components/Filters.scss
+++ b/src/components/Filters.scss
@@ -3,7 +3,7 @@
 .filters {
     background-color: $secondary-color-sage;
     margin: 0 -1rem;
-    padding: 1rem;
+    padding: 1rem 1rem 1.25rem;
 
     &__heading {
         font-size: 1.625rem;
