Ability to only select one filter tag at a time

--- a/src/components/Filters.scss
+++ b/src/components/Filters.scss
@@ -1,4 +1,5 @@
 @use '../styles/partials/variables' as *;
+@use '../styles/partials/mixins' as *;
 
 .filters {
     background-color: $secondary-color-sage;
@@ -25,7 +26,11 @@
         color: $primary-color-green;
         font-weight: 600;
 
-        &:hover {
+        @include tablet {
+            padding: 0.5rem 0.75rem;
+        }
+
+        &--dark {
             background-color: $primary-color-green;
             color: $secondary-color-white;
             cursor: pointer;
