--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -24,6 +24,10 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
+
+        @include tablet {
+            padding: 0.6875rem 1.375rem;
+        }
     }
 
     &__filter-btn-hovered {
