--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -11,6 +11,10 @@
 
     &__logo {
         @include logo;
+
+        @include tablet {
+            font-size: 2.5rem;
+        }
     }
 
     &__filter-btn {
@@ -27,6 +31,7 @@
 
         @include tablet {
             padding: 0.6875rem 1.375rem;
+            font-size: 1rem;
         }
     }
 
