--- a/src/components/PhotoCards.scss
+++ b/src/components/PhotoCards.scss
@@ -1,13 +1,27 @@
 @use '../styles/partials/variables' as *;
+@use '../styles/partials/mixins' as *;
 
 .photos {
     margin-bottom: 4rem;
+
+    @include tablet {
+        font-size: 1rem;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 1rem;
+        justify-content: space-between;
+    }
 }
 
 .card {
     border: 1px solid $secondary-color-green;
     border-radius: 0.5rem;
     margin-bottom: 1rem;
+    font-weight: 400;
+
+    @include tablet {
+        flex: 0 1 48%;
+    }
 
     &__image-container {
         position: relative;
@@ -45,5 +59,9 @@
         border: 1px solid $secondary-color-green;
         padding: 0.375rem 0.5rem;
         background-color: $secondary-color-white;
+
+        @include tablet {
+            padding: 0.5rem 0.75rem;
+        }
     }
 }
