--- a/src/components/Filters.scss
+++ b/src/components/Filters.scss
@@ -6,6 +6,10 @@
     margin: 0 -1rem;
     padding: 1rem 1rem 1.25rem;
 
+    @include tablet {
+        padding: 2rem 1rem 4rem;
+    }
+
     &__heading {
         font-size: 1.625rem;
         font-weight: 400;
