--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -13,6 +13,7 @@
         @include tablet {
             display: flex;
             justify-content: space-between;
+            margin-bottom: 14rem;
         }
     }
 
@@ -22,6 +23,7 @@
         margin-bottom: 2rem;
 
         @include tablet {
+            margin: 0;
             font-size: 2.5rem;
         }
     }
@@ -38,9 +40,8 @@
 
         @include tablet {
             display: flex;
-            gap: 6rem;
+            gap: 5rem;
             padding-right: 2rem;
-            margin-bottom: 10rem;
             font-size: 1.5rem;
         }
 
@@ -54,6 +55,10 @@
         flex-direction: column;
         gap: 0.5rem;
         margin-bottom: 1.5rem;
+
+        @include tablet {
+            margin: 0;
+        }
     }
 
     &__nav {
@@ -61,6 +66,10 @@
         flex-direction: column;
         gap: 0.5rem;
         margin-bottom: 2rem;
+
+        @include tablet {
+            margin: 0;
+        }
     }
 
     &__nav-link {
@@ -75,6 +84,7 @@
         margin-bottom: 1rem;
 
         @include tablet {
+            gap: 1.5rem;
             margin-bottom: 2rem;
         }
 
