desktop filter opened layout + filter selection.

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,6 +20,7 @@ body {
     }
 
     @include desktop {
-        padding: 1rem 2rem;
+        padding: 1rem 1.5rem;
+        overflow-x: hidden;
     }
 }
