--- a/src/components/PhotoCards.scss
+++ b/src/components/PhotoCards.scss
@@ -28,6 +28,8 @@
     border-radius: 0.5rem;
     margin-bottom: 1rem;
     font-weight: 400;
+    color: $primary-color-black;
+    text-decoration: none;
 
     @include tablet {
         flex: 0 1 48%;
