--- a/src/pages/Photo.scss
+++ b/src/pages/Photo.scss
@@ -1,10 +1,76 @@
 @use '../styles/partials/mixins' as *;
+@use '../styles/partials/variables' as *;
 
 
 .photo {
     padding: 2rem 1rem;
 
+    &__header {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 3rem;
+    }
+
     &__logo {
         @include logo;
+
+        @include tablet {
+            font-size: 2.5rem;
+        }
+    }
+
+    &__arrow {
+        transform: scale(1.25);
+        margin-right: 1rem;
+    }
+
+    &__return-link {
+        text-decoration: none;
+        color: $primary-color-green;
+        font-size: 1.5rem;
+        font-weight: 500;
+    }
+
+    &__component {
+        border: 1px solid $secondary-color-green;
+        border-radius: 0.5rem;
+    }
+
+    &__image {
+        width: 100%;
+        vertical-align: top;
+        border-top-left-radius: 0.5rem;
+        border-top-right-radius: 0.5rem;
+    }
+
+    &__component-content {
+        padding: 1.25rem;
+    }
+
+    &__tags-container {
+        display: flex;
+        gap: 0.5rem;
+        margin-bottom: 1rem;
+    }
+
+    &__tag {
+        border: 1px solid $secondary-color-green;
+        padding: 0.375rem 0.5rem;
+        border-radius: 0.375rem;
+        background-color: $secondary-color-white;
+        font-weight: 500;
+    }
+
+    &__component-content-main {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 1rem;
+        font-weight: 500;
+    }
+
+    &__likes-icon {
+        transform: scale(0.9);
+        margin-right: 0.25rem;
     }
 }
