--- a/src/components/PhotoCards.scss
+++ b/src/components/PhotoCards.scss
@@ -3,10 +3,13 @@
 
 .photos {
     margin-bottom: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     @include tablet {
         font-size: 1rem;
-        display: flex;
+        flex-direction: row;
         flex-wrap: wrap;
         gap: 1rem;
         justify-content: space-between;
@@ -26,7 +29,6 @@
 .card {
     border: 1px solid $secondary-color-green;
     border-radius: 0.5rem;
-    margin-bottom: 1rem;
     font-weight: 400;
     color: $primary-color-black;
     text-decoration: none;
