--- a/src/pages/Photo.scss
+++ b/src/pages/Photo.scss
@@ -1,39 +1,10 @@
-@use '../styles/partials/mixins' as *;
 @use '../styles/partials/variables' as *;
 
-
 .photo {
-    padding: 2rem 1rem;
-
-    &__header {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 3rem;
-    }
-
-    &__logo {
-        @include logo;
-
-        @include tablet {
-            font-size: 2.5rem;
-        }
-    }
-
-    &__arrow {
-        transform: scale(1.25);
-        margin-right: 1rem;
-    }
-
-    &__return-link {
-        text-decoration: none;
-        color: $primary-color-green;
-        font-size: 1.5rem;
-        font-weight: 500;
-    }
-
     &__component {
         border: 1px solid $secondary-color-green;
         border-radius: 0.5rem;
+        margin-bottom: 2rem;
     }
 
     &__image {
@@ -67,10 +38,16 @@
         justify-content: space-between;
         font-size: 1rem;
         font-weight: 500;
+        margin-bottom: 0.5rem;
     }
 
     &__likes-icon {
         transform: scale(0.9);
         margin-right: 0.25rem;
+    }
+
+    &__photographer {
+        font-size: 1rem;
+        font-weight: 500;
     }
 }
