--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -20,3 +20,10 @@
     text-decoration: none;
     color: $primary-color-black;
 }
+
+@mixin formfield {
+    padding: 0.5rem;
+    border: 2px solid $secondary-color-green;
+    border-radius: 0.5rem;
+    outline: none;
+}
