Start working with API (registering key, fetch data, etc.).

--- a/src/components/Comments.scss
+++ b/src/components/Comments.scss
@@ -3,6 +3,7 @@
 .comments {
     font-size: 1rem;
     font-weight: 500;
+    margin-bottom: 6rem;
 
     &__ruler {
         border: 1px solid $secondary-color-green;
