--- a/src/components/CommentForm.scss
+++ b/src/components/CommentForm.scss
@@ -18,7 +18,11 @@
         }
 
         &:focus {
-            border: 2px solid $primary-color-green;
+            border-color: $primary-color-green;
+        }
+
+        &--invalid {
+            border-color: #B10606;
         }
     }
 
@@ -33,7 +37,11 @@
         }
 
         &:focus {
-            border: 2px solid $primary-color-green;
+            border-color: $primary-color-green;
+        }
+
+        &--invalid {
+            border-color: #B10606;
         }
     }
 
@@ -43,8 +51,13 @@
         border: none;
         padding: 0.5rem 1rem;
         border-radius: 0.5rem;
+        font-family: 'Outfit';
         font-weight: 500;
         display: block;
         margin-left: auto;
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 }
