--- a/src/components/Comments.scss
+++ b/src/components/Comments.scss
@@ -1,9 +1,14 @@
 @use '../styles/partials/variables' as *;
+@use '../styles/partials/mixins' as *;
 
 .comments {
     font-size: 1rem;
     font-weight: 500;
     margin-bottom: 6rem;
+
+    @include tablet {
+        font-size: 1.25rem;
+    }
 
     &__ruler {
         border: 1px solid $secondary-color-green;
@@ -15,6 +20,10 @@
         color: $primary-color-green;
         display: flex;
         justify-content: space-between;
+
+        @include tablet {
+            font-size: 1rem;
+        }
     }
 
     &__comment {
