--- a/src/components/PhotoCards.scss
+++ b/src/components/PhotoCards.scss
@@ -35,6 +35,7 @@
 
     @include tablet {
         flex: 0 1 48%;
+        border-radius: 0.75rem;
     }
 
     @include desktop {
@@ -50,6 +51,11 @@
         border-top-left-radius: 0.5rem;
         border-top-right-radius: 0.5rem;  
         display: block;
+
+        @include tablet {
+            border-top-left-radius: 0.75rem;
+            border-top-right-radius: 0.75rem; 
+        }
     }
 
     &__photographer {
@@ -70,6 +76,11 @@
         border-bottom-right-radius: 0.5rem;
         display: flex;
         gap: 0.5rem;
+
+        @include tablet {
+            border-bottom-left-radius: 0.75rem;
+            border-bottom-right-radius: 0.75rem; 
+        }
     }
 
     &__tag {
@@ -80,6 +91,7 @@
 
         @include tablet {
             padding: 0.5rem 0.75rem;
+            border-radius: 0.75rem;
         }
     }
 }
