--- a/src/pages/Photo.scss
+++ b/src/pages/Photo.scss
@@ -12,6 +12,10 @@
         border: 2px solid $secondary-color-green;
         border-radius: 0.5rem;
         margin-bottom: 2rem;
+
+        @include tablet {
+            border-radius: 0.75rem;
+        }
     }
 
     &__image {
@@ -19,6 +23,11 @@
         vertical-align: top;
         border-top-left-radius: 0.5rem;
         border-top-right-radius: 0.5rem;
+
+        @include tablet {
+            border-top-left-radius: 0.75rem;
+            border-top-right-radius: 0.75rem;
+        }
     }
 
     &__component-content {
@@ -29,6 +38,8 @@
 
         @include tablet {
             padding: 2rem 2rem 1.5rem;
+            border-bottom-left-radius: 0.75rem;
+            border-bottom-right-radius: 0.75rem;;
         }
     }
 
@@ -49,6 +60,11 @@
         border-radius: 0.375rem;
         background-color: $secondary-color-white;
         font-weight: 500;
+
+        @include tablet {
+            padding: 0.5rem 0.75rem;
+            border-radius: 0.75rem;
+        }
     }
 
     &__component-content-main {
