Filters.jsx - fix filter open state (side bar) length; Header.jsx - replace hovered state styling as modifier classes; PhotoCards.jsx - replace filter-opened desktop styling to modifier classes.

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,10 +17,28 @@ body {
 
     @include tablet {
         font-size: 1.25rem;
+        padding: 1rem 1.5rem;
     }
 
     @include desktop {
-        padding: 1rem 1.5rem;
         overflow-x: hidden;
+    }
+}
+
+.home {
+    &__main {
+        margin-bottom: 5rem;
+
+        @include tablet {
+            margin-bottom: 7rem;
+        }
+
+        @include desktop {
+            margin-bottom: 6rem;
+        }
+
+        @include desktop {
+            position: relative;
+        }
     }
 }
