--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -2,7 +2,7 @@
 @use '../styles/partials/mixins' as *;
 
 .footer {
-    padding: 1rem 0;
+    padding: 1rem 0 1.5rem;
     font-weight: 500;
 
     @include tablet {
@@ -81,7 +81,7 @@
         display: flex;
         align-items: center;
         gap: 2.25rem;
-        margin-bottom: 1rem;
+        margin-bottom: 1.5rem;
 
         @include tablet {
             margin-bottom: 2rem;
@@ -123,7 +123,7 @@
     &__legal-text-container {
         color: $secondary-color-green;
         display: flex;
-        gap: 0.5rem;
+        gap: 1rem;
 
         @include tablet {
             font-size: 1rem;
