--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -26,6 +26,10 @@
             margin: 0;
             font-size: 2.5rem;
         }
+
+        &:hover {
+            cursor: pointer;
+        }
     }
 
     &__content-wrapper {
