--- a/src/components/Filters/Filters.scss
+++ b/src/components/Filters/Filters.scss
@@ -1,5 +1,5 @@
-@use '../styles/partials/variables' as *;
-@use '../styles/partials/mixins' as *;
+@use '../../styles/partials/variables' as *;
+@use '../../styles/partials/mixins' as *;
 
 .filters {
     background-color: $secondary-color-sage;
